--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "babel-core": "^6.25.0",
     "babel-register": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "chai": "^4.1.0",
-    "lodash": "^4.17.4",
-    "mocha": "^3.4.2"
+    "lodash": "^4.17.4"
   },
   "main": "index"
 }
